--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
     </div>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-      Coded by <a href="#">girldocode</a>.
+      Coded by <a href="https://dub.sh/girldocode-git">girldocode</a>.
     </p>
   </footer>
 
